--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -143,7 +143,7 @@ h1 {
 }
 .bubble {
   background-color: white;
-  height: 14rem;
+  height: 16rem;
   width: 80vw;
   border-radius: 10px;
   border: groove 2px;
@@ -442,5 +442,8 @@ h1 {
     justify-content: start;
     align-items: start;
     text-align: start;
+  }
+  .mother {
+    width: 13rem;
   }
 }
